--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -g")
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3 -g")
 option(ENABLE_CUDA "Enable CUDA Acceleration" OFF)
 
+include(CTest)
+
 set(CUDA_AVAILABLE ${ENABLE_CUDA})
 set(ZISA_HAS_CUDA ${ENABLE_CUDA})
 set(ZISA_HAS_NETCDF ON)
