--- a/.github/workflows/cpp_ci.yml
+++ b/.github/workflows/cpp_ci.yml
@@ -1,4 +1,4 @@
-name: C++ Library CI
+name: PDE Solvers CI
 
 on:
   push:
@@ -27,13 +27,13 @@ jobs:
     
     - name: Configure CMake
       shell: bash -l {0}
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Release
+      run: cmake -B ${{github.workspace}}/build -DENABLE_CUDA=OFF
     
     - name: Build
       shell: bash -l {0}
-      run: cmake --build ${{github.workspace}}/build --config Release
+      run: cmake --build ${{github.workspace}}/build
     
     - name: Test
       shell: bash -l {0}
       working-directory: ${{github.workspace}}/build
-      run: ctest -C Release --output-on-failure
+      run: ctest --output-on-failure
